--- a/webapp/petmonitor/templates/dash.html
+++ b/webapp/petmonitor/templates/dash.html
@@ -145,8 +145,10 @@
                     {% block content %}
                     <div class="row">
 
-                        <!-- Live feed -->
+                        <!-- First content column -->
                         <div class="col-sm-8">
+
+                            <!-- Live feed -->
                             <div class="card bg-light w-auto">
                                 <div class="card-body">
                                     <h5 class="card-title">Live feed</h5>
@@ -155,10 +157,11 @@
                             </div>
                         </div>
 
-                        <!-- Play sounds -->
+                        <!-- Second content column -->
                         <div class="col-sm-4">
-                            <div class="card bg-light">
 
+                            <!-- Pet summary -->
+                            <div class="card bg-light">
                                 <div class="card-body">
                                     <h5>Your pets</h5>
                                     <div class="table-responsive">
@@ -178,7 +181,10 @@
                                         </table>
                                     </div>
                                 </div>
+                            </div>
 
+                            <!-- Play sounds -->
+                            <div class="card bg-light">
                                 <div class="card-body">
                                     <h5 class="card-title">Interact with your pets</h5>
                                     <form>
@@ -226,16 +232,6 @@
                                         }
                                     </script>
 
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Activity chart -->
-                        <div class="col">
-                            <div class="card bg-light">
-                                <div class="card-body">
-                                    <h5 class="card-title">Recent activity</h5>
-                                    <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
                                 </div>
                             </div>
                         </div>
