Adjusted spacing around divs

--- a/webapp/petmonitor/templates/dash.html
+++ b/webapp/petmonitor/templates/dash.html
@@ -149,7 +149,7 @@
                         <div class="col-sm-8">
 
                             <!-- Live feed -->
-                            <div class="card bg-light w-auto">
+                            <div class="card bg-light w-auto mb-2">
                                 <div class="card-body">
                                     <h5 class="card-title">Live feed</h5>
                                     <img src="{{ url_for('static', filename='imgs/img_220309_164115.jpg') }}" class="img-fluid" alt="Placeholder for video feed">
@@ -161,7 +161,7 @@
                         <div class="col-sm-4">
 
                             <!-- Pet summary -->
-                            <div class="card bg-light">
+                            <div class="card bg-light mb-2">
                                 <div class="card-body">
                                     <h5>Your pets</h5>
                                     <div class="table-responsive">
@@ -184,7 +184,7 @@
                             </div>
 
                             <!-- Play sounds -->
-                            <div class="card bg-light">
+                            <div class="card bg-light mb-2">
                                 <div class="card-body">
                                     <h5 class="card-title">Interact with your pets</h5>
                                     <form>
