--- a/webapp/petmonitor/static/dash.css
+++ b/webapp/petmonitor/static/dash.css
@@ -97,6 +97,13 @@ body {
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
 
+/* Footer */
+.footer-container {
+  position:absolute;
+  bottom:0;
+  width: 100%;
+}
+
 /* Audio controls */
 audio {
   width: 150px;
@@ -105,4 +112,3 @@ audio {
   border-radius: 95px;
 
 }
-
