Commented out footer until placement is fixed

--- a/webapp/petmonitor/templates/dash.html
+++ b/webapp/petmonitor/templates/dash.html
@@ -242,23 +242,15 @@
                 </main>
 
                 {% block footer %}
-                <footer class="footer mt-auto py-3 text-center">
+                <!--<footer class="footer mt-auto py-3 text-center">
                     <div class="footer-container">
                         <span class="text-muted">&copy; 2022 Siobh&aacute;n Phelan | <a href="mailto:B00139195@mytudublin.ie">Contact</a></span>
                     </div>
-                </footer>
+                </footer>-->
                 {% endblock %}
 
             </div>
         </div>  <!-- End of page container -->
-
-        <!--
-        <footer class="footer mt-auto py-3 text-center">
-            <div class="footer-container">
-                <span class="text-muted">&copy; 2022 Siobh&aacute;n Phelan | <a href="mailto:B00139195@mytudublin.ie">Contact</a></span>
-            </div>
-        </footer>
-        -->
 
         <!-- Bootstrap JS Bundle with Popper -->
         <script 
