--- a/webapp/petmonitor/templates/profile/update.html
+++ b/webapp/petmonitor/templates/profile/update.html
@@ -79,21 +79,21 @@
         <div class="mb-3 row">
             <label for="inputPhone" class="col-sm-2 col-form-label">Phone</label>
             <div class="col-sm-5">
-                <input type="text" class="form-control" id="inputPhone" placeholder="0{{ profile['phone_num'] }}">
+                <input type="text" class="form-control" id="inputPhone" value="0{{ profile['phone_num'] }}">
             </div>
         </div>
         
         <div class="mb-3 row">
             <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-5">
-                <input type="email" class="form-control" id="inputEmail" placeholder="{{ profile['email_address'] }}">
+                <input type="email" class="form-control" id="inputEmail" value="{{ profile['email_address'] }}">
             </div>
         </div>
         
         <div class="mb-3 row">
-            <label for="inputPW" class="col-sm-2 col-form-label">Password</label>
+            <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
             <div class="col-sm-5">
-                <input type="password" class="form-control" id="inputPW">
+                <input type="password" class="form-control" id="inputPassword">
             </div>
         </div>
         
