Added url for add pet page

--- a/webapp/petmonitor/templates/dash.html
+++ b/webapp/petmonitor/templates/dash.html
@@ -121,7 +121,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="{{ url_for('profile.addpet') }}">
                                     <i class="bi-plus-circle me-2"></i>
                                     Add pet
                                 </a>
