Renamed form labels

--- a/webapp/petmonitor/templates/auth/register.html
+++ b/webapp/petmonitor/templates/auth/register.html
@@ -13,32 +13,32 @@
 
 <div id="register-form">
     <form method="post">
-        <div class="form-floating auth-form form-row">
+        <div class="form-floating floating-form-label form-row">
             <input type="text" class="form-control" id="floatingFN" name="floatingFN" placeholder="First Name" required>
             <label for="floatingFN">First name</label>
         </div>
 
-        <div class="form-floating auth-form form-row">
+        <div class="form-floating floating-form-label form-row">
             <input type="text" class="form-control" id="floatingLN" name="floatingLN" placeholder="Last Name" required>
             <label for="floatingLN">Last name</label>
         </div>
 
-        <div class="form-floating auth-form form-row">
+        <div class="form-floating floating-form-label form-row">
             <input type="text" class="form-control" id="floatingPhone" name="floatingPhone" placeholder="Phone Number" required>
             <label for="floatingPhone">Phone number</label>
         </div>
 
-        <div class="form-floating auth-form form-row">
+        <div class="form-floating floating-form-label form-row">
             <input type="email" class="form-control" id="floatingEmail" name="floatingEmail" placeholder="Email Address" required>
             <label for="floatingEmail">Email address</label>
         </div>
 
-        <div class="form-floating mb-3 auth-form form-row">
+        <div class="form-floating mb-3 floating-form-label form-row">
             <input type="password" class="form-control" id="floatingPassword" name="floatingPassword" placeholder="Password" min-length="12" required>
             <label for="floatingPassword">Password (min 12 chars)</label>
         </div>
 
-        <!--<div class="form-floating mb-3 auth-form form-row">
+        <!--<div class="form-floating mb-3 floating-form-label form-row">
             <input type="password" class="form-control" id="floatingConfirmPass" name="floatingConfirmPass" placeholder="Confirm Password" min-length="12" required>
             <label for="floatingConfirmPass">Confirm password</label>
         </div>-->
