--- a/webapp/petmonitor/templates/auth/login.html
+++ b/webapp/petmonitor/templates/auth/login.html
@@ -11,12 +11,12 @@
 {% block content %}
 <div id="signin-form">
     <form method="post">
-        <div class="form-floating auth-form form-row">
+        <div class="form-floating floating-form-label form-row">
             <input type="email" class="form-control" id="floatingEmail" name="floatingEmail" placeholder="name@example.com" required>
             <label for="floatingEmail">Email address</label>
         </div>
 
-        <div class="form-floating mb-3 auth-form form-row">
+        <div class="form-floating mb-3 floating-form-label form-row">
             <input type="password" class="form-control" id="floatingPassword" name="floatingPassword" placeholder="Password" required>
             <label for="floatingPassword">Password</label>
         </div>
