--- a/webapp/petmonitor/templates/profile/addpet.html
+++ b/webapp/petmonitor/templates/profile/addpet.html
@@ -79,7 +79,12 @@
                         <tr>
                             <td>{{ pet['pet_name'] }}</td>
                             <td>{{ pet['species_type'] }}</td>
-                            <td>{{ pet['age'] }}</td>
+                            <!-- Check that stored pet age is not a year -->
+                            {% if pet['age'] >= yearNotAge %}
+                                <td>Unknown</td>
+                            {% else %}
+                                <td>{{ pet['age'] }}</td>
+                            {% endif %}
                         </tr>
                         {% endfor %}
                     </table>
