Added password match validation

--- a/webapp/petmonitor/templates/auth/register.html
+++ b/webapp/petmonitor/templates/auth/register.html
@@ -38,10 +38,10 @@
             <label for="floatingPassword">Password (min 12 chars)</label>
         </div>
 
-        <!--<div class="form-floating mb-3 floating-form-label form-row">
+        <div class="form-floating mb-3 floating-form-label form-row">
             <input type="password" class="form-control" id="floatingConfirmPass" name="floatingConfirmPass" placeholder="Confirm Password" min-length="12" required>
             <label for="floatingConfirmPass">Confirm password</label>
-        </div>-->
+        </div>
 
         <input type="submit" value="Register" class="w-100 btn btn-lg btn-orange mb-3">
 
