Added confirm password validation

--- a/webapp/petmonitor/templates/profile/update.html
+++ b/webapp/petmonitor/templates/profile/update.html
@@ -102,12 +102,12 @@
             </div>
         </div>
         
-        <!--<div class="mb-3 row">
-            <label for="confirmPW" class="col-sm-2 col-form-label">Password</label>
+        <div class="mb-3 row">
+            <label for="confirmPassword" class="col-sm-2 col-form-label">Confirm Password</label>
             <div class="col-sm-5">
-                <input type="password" class="form-control" id="confirmPW">
+                <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
             </div>
-        </div>-->
+        </div>
 
         <div class="mx-auto">
             <input type="submit" value="Update" class="btn btn-orange mb-3 mx-auto">
