--- a/webapp/petmonitor/templates/dash/photos.html
+++ b/webapp/petmonitor/templates/dash/photos.html
@@ -48,8 +48,14 @@
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{{ url_for('profile.addpet') }}">
-            <i class="bi-plus-circle me-2"></i>
+            <i class="bi-clipboard2-plus me-2"></i>
             Add pet
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">
+            <i class="bi-clipboard2-minus me-2"></i>
+            Delete pet
         </a>
     </li>
 </ul>
