Changed button names

--- a/webapp/petmonitor/templates/dash.html
+++ b/webapp/petmonitor/templates/dash.html
@@ -195,19 +195,19 @@
                                     <form>
                                         <!-- Audio selection -->
                                         <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="audioBtn" id="call" onclick="previewAudio()">
+                                            <input class="form-check-input" type="radio" name="audioSelect" id="call" onclick="previewAudio()">
                                             <label class="form-check-label" for="call">Call cat</label>
                                         </div>
                                         <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="audioBtn" id="meow" onclick="previewAudio()">
+                                            <input class="form-check-input" type="radio" name="audioSelect" id="meow" onclick="previewAudio()">
                                             <label class="form-check-label" for="meow">Meow</label>
                                         </div>
                                         <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="audioBtn" id="rustle" onclick="previewAudio()">
+                                            <input class="form-check-input" type="radio" name="audioSelect" id="rustle" onclick="previewAudio()">
                                             <label class="form-check-label" for="rustle">Rustle paper</label>
                                         </div>
                                         <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="audioBtn" id="bird" onclick="previewAudio()">
+                                            <input class="form-check-input" type="radio" name="audioSelect" id="bird" onclick="previewAudio()">
                                             <label class="form-check-label" for="bird">Birdsong</label>
                                         </div>
 
