--- a/webapp/petmonitor/templates/dash.html
+++ b/webapp/petmonitor/templates/dash.html
@@ -122,8 +122,14 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('profile.addpet') }}">
-                                    <i class="bi-plus-circle me-2"></i>
+                                    <i class="bi-clipboard2-plus me-2"></i>
                                     Add pet
+                                </a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="{{ url_for('profile.deletepet') }}">
+                                    <i class="bi-clipboard2-minus me-2"></i>
+                                    Delete pet
                                 </a>
                             </li>
                         </ul>
