--- a/webapp/petmonitor/templates/dash/reports.html
+++ b/webapp/petmonitor/templates/dash/reports.html
@@ -53,7 +53,7 @@
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="{{ url_for('profile.deletepet') }}">
             <i class="bi-clipboard2-minus me-2"></i>
             Delete pet
         </a>
