Created delete pet view/page

--- a/webapp/petmonitor/templates/profile/deletepet.html
+++ b/webapp/petmonitor/templates/profile/deletepet.html
@@ -105,7 +105,9 @@
                             </table>
                         </div>
 
-                        <input type="submit" value="Delete pet" class="btn btn-danger mt-2">
+                        <div class="mx-auto">
+                            <input type="submit" value="Delete pet" class="btn btn-danger mt-2 mb-3 mx-auto">
+                        </div>
                     </form>
 
                     <!-- Space to show confirmation message or errors -->
