Tweaked code to display random image from captures

--- a/webapp/petmonitor/templates/dash.html
+++ b/webapp/petmonitor/templates/dash.html
@@ -154,11 +154,11 @@
                         <!-- First content column -->
                         <div class="col-sm-8">
 
-                            <!-- Live feed -->
+                            <!-- Live feed/ random image -->
                             <div class="card bg-light w-auto mb-2">
                                 <div class="card-body">
                                     <h5 class="card-title">Live feed</h5>
-                                    <img src="{{ url_for('static', filename='imgs/img_220309_164115.jpg') }}" class="img-fluid" alt="Placeholder for video feed">
+                                    <img src="{{ image }}" class="img-fluid" alt="Random image from captures">
                                 </div>
                             </div>
                         </div>
@@ -274,6 +274,11 @@
             src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" 
             crossorigin="anonymous">
         </script>
+
+        <script 
+        src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" 
+        integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" 
+        crossorigin="anonymous"></script><script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
 
     </body>
 
