--- a/webapp/petmonitor/templates/dash.html
+++ b/webapp/petmonitor/templates/dash.html
@@ -39,6 +39,9 @@
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
+        <!-- Javascript CDN for Plotly -->
+        <script src="https://cdn.plot.ly/plotly-2.11.1.min.js"></script>
         
         <title>PetMonitor | {% block title %} {{ displayname }}'s Dashboard {% endblock %}</title>
 
@@ -252,14 +255,6 @@
 
                 </main>
 
-                {% block footer %}
-                <!--<footer class="footer mt-auto py-3 text-center">
-                    <div class="footer-container">
-                        <span class="text-muted">&copy; 2022 Siobh&aacute;n Phelan | <a href="mailto:B00139195@mytudublin.ie">Contact</a></span>
-                    </div>
-                </footer>-->
-                {% endblock %}
-
             </div>
         </div>  <!-- End of page container -->
 
@@ -274,11 +269,6 @@
             src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" 
             crossorigin="anonymous">
         </script>
-
-        <script 
-        src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" 
-        integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" 
-        crossorigin="anonymous"></script><script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
 
     </body>
 
