Changed datalist to select tag

--- a/webapp/petmonitor/templates/profile/addpet.html
+++ b/webapp/petmonitor/templates/profile/addpet.html
@@ -115,11 +115,10 @@
                         </div>
                         
                         <div class="form-floating floating-form-label form-row mb-2">
-                            <input list="species" class="form-control" name="floatingSpecies" placeholder="Species" required>
-                            <datalist id="species">
-                                <option value="Cat">
-                                <option value="Dog">
-                            </datalist>
+                            <select class="form-select" id="species" name="floatingSpecies" placeholder="Species" required>
+                                <option value="Cat">Cat</option>
+                                <option value="Dog">Dog</option>
+                            </select>
                             <label for="floatingSpecies">Species</label>
                         </div>
                 
