Changed 'live feed' to 'image of the day'

--- a/webapp/petmonitor/templates/dash.html
+++ b/webapp/petmonitor/templates/dash.html
@@ -160,7 +160,7 @@
                             <!-- Live feed/ random image -->
                             <div class="card bg-light w-auto mb-2">
                                 <div class="card-body">
-                                    <h5 class="card-title">Live feed</h5>
+                                    <h5 class="card-title">Image of the day</h5>
                                     <img src="{{ image }}" class="img-fluid" alt="Random image from captures">
                                 </div>
                             </div>
